# nova-cameras3

./: CMakeLists.txt  README.md  default.nix  package.xml
include/cameras/: cameras.hpp  pipeline.hpp
launch/: cameras.launch.py
params/: directory.yaml  streamer.yaml
params/platform/aftershock_laptop/: core.yaml
params/platform/aftershock_laptop/payload/: science-arc.yaml
params/platform/intel_laptop/: core.yaml
params/platform/intel_laptop/payload/: arm.yaml  science-urc.yaml  science_urc.yaml
params/platform/orin/: core.yaml
params/platform/orin/payload/: arm.yaml  ec.yaml  science-arc.yaml  science-urc.yaml
params/platform/orin_dev_board/: core.yaml
params/platform/rover/: core.yaml
params/platform/rover/payload/: arm.yaml  ec.yaml  science-arc.yaml  science-urc.yaml  science.yaml  science_urc.yaml
params/platform/tx2_dev_board/: core.yaml
src/: camera_directory_service.cpp  camera_globals.cpp  camera_pipelines.cpp  camera_streamer_service.cpp  directory_parameters.yaml
